# boilerplate-simple

./: CMakeLists.txt
apps/: example.cpp
include/: SimpleClass.hpp
src/: CMakeLists.txt  SimpleClass.cpp
tests/: CMakeLists.txt
tests/src/: SimpleClassTest.cpp
